# Augmentation-and-Replacement-in-SaaS-Sales-Engineering

./: Augmentation-and-Replacement-in-SaaS-Sales-Engineering.tex  scrub.py  scrub_git.py
src/: CONTRIBUTING.md  README.md  RESEARCHCLAW_AGENTS.md  RESEARCHCLAW_CLAUDE.md  build_bulletproof.py  build_ieee.py  build_ieee_perfect.py  build_perfect_final.py  build_proud_final.py  build_super_final.py  compile_cloud.py  config.researchclaw.example.yaml  config.researchpipeline.example.yaml  debug_compile.py  debug_compile_ieee.py  generate_pdf.py  make_graphs.py  manual_export.py  prompts.default.yaml  push_core_code.py  pyproject.toml  sentinel.sh
src/docs/: BUG_FIX_DOCUMENT_20260316.md  BUG_TRACKER.md  CHANGELOG_ANTHROPIC_ADAPTER.md  PIPELINE_TEST_LOG_R5.md  README_AR.md  README_CN.md  README_DE.md  README_ES.md  README_FR.md  README_JA.md  README_KO.md  README_PT.md  README_RU.md  TESTER_GUIDE.md  TESTER_GUIDE_CN.md  TESTER_GUIDE_JA.md  agent_figure_and_benchmark_plan.md  integration-guide.md  issue_tracker_v9.md  iteration_plan_v8.md  iteration_showcase_narrative.md  metaclaw-integration-plan.md  next_phase_showcase_plan.md  pipeline_critical_fixes_v8.md  rate_limit_fix_plan.md  sandbox_environment_fix_plan.md
src/publications/: references.bib
src/researchclaw/: __init__.py  config.py
src/researchpipeline/: __init__.py  __main__.py  cli.py  config.py  evolution.py  health.py  prompts.py  quality.py  report.py
src/scripts/: metaclaw_start.sh  plot_iteration_showcase.py  test_beast_mode_e2e.py  test_code_agent_live.py  test_code_agent_sandbox.py  test_codegen_v2.py
(+671 files in other folders)
